--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -94,7 +94,7 @@
         
         
         <string name="expanablesellall">Sold all the stock！</string>
-        <string name="expanablereduce">stock reduction</string>
+        <string name="expanablereduce">Reduce</string>
         <string name="expanableentererror">Enter incorrect！  </string>
         <string name="expanableeditesucess">Edited success！</string>
        
